Labs/aula_dada/lab3/tarefa3/exp.atg
import java.io.*;           

COMPILER Copia

int valor;               

CHARACTERS
    digito = "0123456789".
TOKENS
    num = digito { digito }.
IGNORE '\t'+'\r'

PRODUCTIONS
    Copia = Linha { Linha } .
    Linha 
    = "calc" Exp    (. System.out.println(valor); .)    
      "\n"
    .
    Exp 
    = num           (. valor = Integer.parseInt(t.val); .)
      { "+" num     (. valor += Integer.parseInt(t.val); .)
      } 
    .
END Copia.
